Fix alignment

--- a/src/assets/showcase/styles/app/_code.scss
+++ b/src/assets/showcase/styles/app/_code.scss
@@ -21,7 +21,7 @@ pre[class*="language-"] {
     hyphens: none;
 }
 
-/* Code blocks */
+ /* Code blocks */
 pre[class*="language-"] {
     position: relative;
     margin: .5em 0;
@@ -44,6 +44,7 @@ code[class*="language-"] {
     max-height: inherit;
     height: inherit;
     padding: 0 1em;
+    padding-top: 0 !important;
     display: block;
     overflow: auto;
 }
@@ -229,7 +230,7 @@ div.code-toolbar:hover > .toolbar {
 }
 
 /* Separate line b/c rules are thrown out if selector is invalid.
-   IE11 and old Edge versions don't support :focus-within. */
+IE11 and old Edge versions don't support :focus-within. */
 div.code-toolbar:focus-within > .toolbar {
     opacity: 1;
 }
@@ -278,138 +279,134 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 }
 
 .layout-wrapper-dark {
-   pre[class*="language-"] {
-       code {
-           .token {
-               &.tag {
-                   color: var(--text-color) !important;
-               }
-               &.keyword {
-                   color: rgb(244,112,103) !important;
-               }
-   
-               &.property {
-                   color: rgb(150,208,255) !important;
-               }
-   
-               &.attr-name,
-               &.attr-string {
-                   color: rgb(108,182,255) !important;
-               }
-   
-               &.string {
-                   color: var(--text-color) !important;
-               }
-   
-               &.attr-value {
-                   color: var(--text-color) !important;
-   
-                   .punctuation {
-                       color: rgb(108,182,255) !important;
-                   }
-               }
-   
-               &.punctuation {
-                   color: var(--text-color) !important;
-               }
-   
-               &.operator,
-               &.string {
-                   background: transparent;
-               }
-   
-               &.function {
-                   color: rgb(220,189,251) !important;
-               }
-   
-               &.class-name {
-                   color: rgb(141,219,140) !important;
-               }
-   
-               &.operator {
-                   color: rgb(150,208,255) !important;
-               }
-           }
-       }
-   }
+    pre[class*="language-"] {
+        code {
+            color: var(--text-color) !important;
+
+            .token {
+                &.tag {
+                    color: rgb(141,219,140) !important;
+                }
+                &.keyword {
+                    color: rgb(244,112,103) !important;
+                }
+    
+                &.property {
+                    color: rgb(150,208,255) !important;
+                }
+    
+                &.attr-name,
+                &.attr-string {
+                    color: rgb(108,182,255) !important;
+                }
+    
+                &.string {
+                    color: var(--text-color) !important;
+                }
+    
+                &.attr-value {
+                    color: var(--text-color) !important;
+    
+                    .punctuation {
+                        color: rgb(108,182,255) !important;
+                    }
+                }
+    
+                &.punctuation {
+                    color: var(--text-color) !important;
+                }
+    
+                &.operator,
+                &.string {
+                    background: transparent;
+                }
+    
+                &.function {
+                    color: rgb(220,189,251) !important;
+                }
+    
+                &.operator {
+                    color: rgb(150,208,255) !important;
+                }
+            }
+        }
+    }
 }
 
 .layout-wrapper-light {
-   pre[class*="language-"] {
-       code {
-           .token {
-               &.tag {
-                   color: rgb(10,48,105) !important;
-               }
-               &.keyword {
-                   color: rgb(207,34,46) !important;
-               }
-   
-               &.property {
-                   color: rgb(5,80,174) !important;
-               }
-   
-               &.attr-name,
-               &.attr-string {
-                   color: rgb(5,80,174) !important;
-               }
-   
-               &.string {
-                   color: rgb(10,48,105) !important;
-               }
-   
-               &.attr-value {
-                   color: rgb(10,48,105) !important;
-   
-                   .punctuation {
-                       color: rgb(10,48,105) !important;
-                   }
-               }
-   
-               &.punctuation {
-                   color: rgb(5,80,174) !important;
-               }
-   
-               &.operator,
-               &.string {
-                   background: transparent;
-               }
-   
-               &.function {
-                   color: rgb(130,80,223) !important;
-               }
-   
-               &.class-name {
-                   color: rgb(17,99,41) !important;
-               }
-   
-               &.operator {
-                   color: rgb(5,80,174) !important;
-               }
-           }
-       }
-   }
+    pre[class*="language-"] {
+        code {
+            color: rgb(10,48,105) !important;
+
+            .token {
+                &.tag {
+                    color: rgb(17,99,41) !important;
+                }
+                &.keyword {
+                    color: rgb(207,34,46) !important;
+                }
+    
+                &.property {
+                    color: rgb(5,80,174) !important;
+                }
+    
+                &.attr-name,
+                &.attr-string {
+                    color: rgb(5,80,174) !important;
+                }
+    
+                &.string {
+                    color: rgb(10,48,105) !important;
+                }
+    
+                &.attr-value {
+                    color: rgb(10,48,105) !important;
+    
+                    .punctuation {
+                        color: rgb(10,48,105) !important;
+                    }
+                }
+    
+                &.punctuation {
+                    color: rgb(5,80,174) !important;
+                }
+    
+                &.operator,
+                &.string {
+                    background: transparent;
+                }
+    
+                &.function {
+                    color: rgb(130,80,223) !important;
+                }
+    
+                &.operator {
+                    color: rgb(5,80,174) !important;
+                }
+            }
+        }
+    }
 }
 
 pre[class*="language-"] {
-   position: relative;
-   background: transparent !important;
+    position: relative;
+    background: transparent !important;
 
-   &:before, &:after {
-       display: none !important;
-   }
+    &:before, &:after {
+        display: none !important;
+    }
 
-   code {
-       border-left: 1rem solid transparent !important;
-       box-shadow: none !important;
-       background: var(--surface-card) !important;
-       margin: 0;
-       color: var(--surface-900);
-       font-size: 14px;
-       border-radius: 10px;
-   }
-   }
+    code {
+        border-left: 1rem solid transparent !important;
+        box-shadow: none !important;
+        background: var(--surface-card) !important;
+        margin: 0;
+        color: var(--surface-900);
+        font-size: 14px;
+        border-radius: 10px;
+    }
+    }
 
 .copy-to-clipboard-button {
-   display: none;
+    display: none;
 }
